# compiler-lab-24fall-huawei

./: .gitmodules  CMakeLists.txt  README.md  编译原理实验gitee平台指南.md
Documentations/: environments.md  git.md
Documentations/lab0/: README.md
Documentations/lab1/: README.md
Documentations/lab2/: README.md
Documentations/lab3/: README.md
Documentations/lab4/: README.md
Documentations/lab5/: README.md
Documentations/lab6/: README.md
Documentations/lab7/: README.md
Reports/lab0/: lab0.docx  report.md
Reports/lab1/: lab1.docx  report.md
Reports/lab2/: lab2.docx  report.md
Reports/lab3/: lab3.docx  report.md
Reports/lab4/: lab4.docx  report.md
Reports/lab5/: lab5_1.docx  lab5_2.docx  lab5_3.docx  report-phase1.md  report-phase2.md
Reports/lab6/: report.md
Reports/lab7/: report.md
include/: cminusf_builder.hpp  lexical_analyzer.h
include/lightir/: Constant.h
src/: CMakeLists.txt
src/bisheng/: CMakeLists.txt  feedback.c  fpopt.cpp  loop_vectorize.cpp  memlayout.c  memlayout_opt.c  prefetch.cpp
src/cminusfc/: CMakeLists.txt  cminusf_builder.cpp  cminusf_builder1.cpp  cminusfc.cpp
src/io/: CMakeLists.txt
src/lexer/: lexical_analyzer.l
src/optimization/: ActiveVars.cpp  ConstPropagation.cpp  LoopInvHoist.cpp
src/parser/: lexical_analyzer.l  syntax_analyzer.y
tests/lab1/testcase/: cminus_1
tests/lab1/token/: tokens_1.txt
tests/lab2/: 1.cminus  1.out
tests/lab3/: CMakeLists.txt
tests/lab3/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  stu_assign_generator.ll  stu_fun_generator.ll  stu_if_generator.ll  stu_while_generate.ll  while_generator.cpp
tests/lab3/stu_ll/: assign_hand.ll  fun_hand.ll  if_hand.ll  while_hand.ll
tests/lab3/ta_gcd/: gcd_array.ll  gcd_array_zhu.txt
tests/lab5/: lab5_tests.py
